# backend/docs/swagger.yaml
@@ -1,97 +1,6 @@
 basePath: /api
 definitions:
-  anyrouter-checkin_internal_model.Account:
-    properties:
-      created_at:
-        $ref: '#/definitions/carbon.DateTime'
-      id:
-        type: integer
-      last_checkin:
-        $ref: '#/definitions/carbon.DateTime'
-      last_result:
-        type: string
-      name:
-        type: string
-      role:
-        type: integer
-      status:
-        type: integer
-      updated_at:
-        $ref: '#/definitions/carbon.DateTime'
-      user_id:
-        type: integer
-      username:
-        type: string
-    type: object
-  anyrouter-checkin_internal_model.CheckinLog:
-    properties:
-      account_id:
-        type: integer
-      created_at:
-        $ref: '#/definitions/carbon.DateTime'
-      id:
-        type: integer
-      message:
-        type: string
-      success:
-        type: boolean
-    type: object
-  anyrouter-checkin_internal_model.CronTask:
-    properties:
-      account_ids:
-        type: string
-      created_at:
-        $ref: '#/definitions/carbon.DateTime'
-      cron_expr:
-        type: string
-      id:
-        type: integer
-      last_run:
-        $ref: '#/definitions/carbon.DateTime'
-      name:
-        type: string
-      next_run:
-        $ref: '#/definitions/carbon.DateTime'
-      status:
-        type: integer
-      task_type:
-        type: string
-    type: object
-  anyrouter-checkin_internal_service.CheckinLogSummary:
-    properties:
-      logs:
-        items:
-          $ref: '#/definitions/anyrouter-checkin_internal_model.CheckinLog'
-        type: array
-      today_checkin_account_count:
-        type: integer
-    type: object
-  anyrouter-checkin_internal_service.SessionInfo:
-    properties:
-      group:
-        type: string
-      role:
-        type: integer
-      status:
-        type: integer
-      user_id:
-        type: integer
-      username:
-        type: string
-    type: object
-  anyrouter-checkin_pkg_response.Response:
-    properties:
-      code:
-        type: integer
-      data: {}
-      message:
-        type: string
-    type: object
-  carbon.DateTime:
-    properties:
-      error: {}
-    type: object
-  internal_handler.AccountRequest:
+  handler.AccountRequest:
     properties:
       name:
         example: 我的账号
@@ -103,7 +12,7 @@ definitions:
     - name
     - session
     type: object
-  internal_handler.ChangePasswordRequest:
+  handler.ChangePasswordRequest:
     properties:
       new_password:
         example: newpass123
@@ -116,7 +25,7 @@ definitions:
     - new_password
     - old_password
     type: object
-  internal_handler.CronRequest:
+  handler.CronRequest:
     properties:
       account_ids:
         example: '[1,2]'
@@ -137,7 +46,7 @@ definitions:
     - cron_expr
     - name
     type: object
-  internal_handler.LoginRequest:
+  handler.LoginRequest:
     properties:
       password:
         example: admin123
@@ -149,13 +58,107 @@ definitions:
     - password
     - username
     type: object
-  internal_handler.VerifyRequest:
+  handler.VerifyRequest:
     properties:
       session:
         example: base64-session-cookie
         type: string
     required:
     - session
+    type: object
+  model.Account:
+    properties:
+      created_at:
+        format: date-time
+        type: string
+      id:
+        type: integer
+      last_checkin:
+        format: date-time
+        type: string
+      last_result:
+        type: string
+      name:
+        type: string
+      role:
+        type: integer
+      status:
+        type: integer
+      updated_at:
+        format: date-time
+        type: string
+      user_id:
+        type: integer
+      username:
+        type: string
+    type: object
+  model.CheckinLog:
+    properties:
+      account_id:
+        type: integer
+      created_at:
+        format: date-time
+        type: string
+      id:
+        type: integer
+      message:
+        type: string
+      success:
+        type: boolean
+    type: object
+  model.CronTask:
+    properties:
+      account_ids:
+        type: string
+      created_at:
+        format: date-time
+        type: string
+      cron_expr:
+        type: string
+      id:
+        type: integer
+      last_run:
+        format: date-time
+        type: string
+      name:
+        type: string
+      next_run:
+        format: date-time
+        type: string
+      status:
+        type: integer
+      task_type:
+        type: string
+    type: object
+  response.Response:
+    properties:
+      code:
+        type: integer
+      data: {}
+      message:
+        type: string
+    type: object
+  service.CheckinLogSummary:
+    properties:
+      logs:
+        items:
+          $ref: '#/definitions/model.CheckinLog'
+        type: array
+      today_checkin_account_count:
+        type: integer
+    type: object
+  service.SessionInfo:
+    properties:
+      group:
+        type: string
+      role:
+        type: integer
+      status:
+        type: integer
+      user_id:
+        type: integer
+      username:
+        type: string
     type: object
 host: localhost:8080
 info:
@@ -173,11 +176,11 @@ paths:
           description: OK
           schema:
             allOf:
-            - $ref: '#/definitions/anyrouter-checkin_pkg_response.Response'
+            - $ref: '#/definitions/response.Response'
             - properties:
                 data:
                   items:
-                    $ref: '#/definitions/anyrouter-checkin_internal_model.Account'
+                    $ref: '#/definitions/model.Account'
                   type: array
               type: object
       security:
@@ -194,7 +197,7 @@ paths:
         name: request
         required: true
         schema:
-          $ref: '#/definitions/internal_handler.AccountRequest'
+          $ref: '#/definitions/handler.AccountRequest'
       produces:
       - application/json
       responses:
@@ -202,10 +205,10 @@ paths:
           description: OK
           schema:
             allOf:
-            - $ref: '#/definitions/anyrouter-checkin_pkg_response.Response'
+            - $ref: '#/definitions/response.Response'
             - properties:
                 data:
-                  $ref: '#/definitions/anyrouter-checkin_internal_model.Account'
+                  $ref: '#/definitions/model.Account'
               type: object
       security:
       - BearerAuth: []
@@ -226,7 +229,7 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/anyrouter-checkin_pkg_response.Response'
+            $ref: '#/definitions/response.Response'
       security:
       - BearerAuth: []
       summary: 删除账号
@@ -246,7 +249,7 @@ paths:
         name: request
         required: true
         schema:
-          $ref: '#/definitions/internal_handler.AccountRequest'
+          $ref: '#/definitions/handler.AccountRequest'
       produces:
       - application/json
       responses:
@@ -254,10 +257,10 @@ paths:
           description: OK
           schema:
             allOf:
-            - $ref: '#/definitions/anyrouter-checkin_pkg_response.Response'
+            - $ref: '#/definitions/response.Response'
             - properties:
                 data:
-                  $ref: '#/definitions/anyrouter-checkin_internal_model.Account'
+                  $ref: '#/definitions/model.Account'
               type: object
       security:
       - BearerAuth: []
@@ -278,7 +281,7 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/anyrouter-checkin_pkg_response.Response'
+            $ref: '#/definitions/response.Response'
       security:
       - BearerAuth: []
       summary: 手动执行签到
@@ -294,7 +297,7 @@ paths:
         name: request
         required: true
         schema:
-          $ref: '#/definitions/internal_handler.VerifyRequest'
+          $ref: '#/definitions/handler.VerifyRequest'
       produces:
       - application/json
       responses:
@@ -302,10 +305,10 @@ paths:
           description: OK
           schema:
             allOf:
-            - $ref: '#/definitions/anyrouter-checkin_pkg_response.Response'
+            - $ref: '#/definitions/response.Response'
             - properties:
                 data:
-                  $ref: '#/definitions/anyrouter-checkin_internal_service.SessionInfo'
+                  $ref: '#/definitions/service.SessionInfo'
               type: object
       summary: 验证 AnyRouter Session 有效性
       tags:
@@ -320,7 +323,7 @@ paths:
         name: request
         required: true
         schema:
-          $ref: '#/definitions/internal_handler.LoginRequest'
+          $ref: '#/definitions/handler.LoginRequest'
       produces:
       - application/json
       responses:
@@ -328,7 +331,7 @@ paths:
           description: OK
           schema:
             allOf:
-            - $ref: '#/definitions/anyrouter-checkin_pkg_response.Response'
+            - $ref: '#/definitions/response.Response'
             - properties:
                 data:
                   additionalProperties:
@@ -348,14 +351,14 @@ paths:
         name: request
         required: true
         schema:
-          $ref: '#/definitions/internal_handler.ChangePasswordRequest'
+          $ref: '#/definitions/handler.ChangePasswordRequest'
       produces:
       - application/json
       responses:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/anyrouter-checkin_pkg_response.Response'
+            $ref: '#/definitions/response.Response'
       security:
       - BearerAuth: []
       summary: 修改当前用户密码
@@ -369,7 +372,7 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/anyrouter-checkin_pkg_response.Response'
+            $ref: '#/definitions/response.Response'
       security:
       - BearerAuth: []
       summary: 获取当前用户信息
@@ -393,7 +396,7 @@ paths:
           description: OK
           schema:
             allOf:
-            - $ref: '#/definitions/anyrouter-checkin_pkg_response.Response'
+            - $ref: '#/definitions/response.Response'
             - properties:
                 data:
                   additionalProperties:
@@ -431,7 +434,7 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/anyrouter-checkin_pkg_response.Response'
+            $ref: '#/definitions/response.Response'
       security:
       - BearerAuth: []
       summary: 更新指定分类的配置
@@ -445,10 +448,10 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/anyrouter-checkin_pkg_response.Response'
+            $ref: '#/definitions/response.Response'
       security:
       - BearerAuth: []
-      summary: 发送 Telegram 测试消息
+      summary: 发送 Telegram 测试消息（使用最近成功签到记录）
       tags:
       - 系统配置
   /cron:
@@ -460,11 +463,11 @@ paths:
           description: OK
           schema:
             allOf:
-            - $ref: '#/definitions/anyrouter-checkin_pkg_response.Response'
+            - $ref: '#/definitions/response.Response'
             - properties:
                 data:
                   items:
-                    $ref: '#/definitions/anyrouter-checkin_internal_model.CronTask'
+                    $ref: '#/definitions/model.CronTask'
                   type: array
               type: object
       security:
@@ -481,7 +484,7 @@ paths:
         name: request
         required: true
         schema:
-          $ref: '#/definitions/internal_handler.CronRequest'
+          $ref: '#/definitions/handler.CronRequest'
       produces:
       - application/json
       responses:
@@ -489,10 +492,10 @@ paths:
           description: OK
           schema:
             allOf:
-            - $ref: '#/definitions/anyrouter-checkin_pkg_response.Response'
+            - $ref: '#/definitions/response.Response'
             - properties:
                 data:
-                  $ref: '#/definitions/anyrouter-checkin_internal_model.CronTask'
+                  $ref: '#/definitions/model.CronTask'
               type: object
       security:
       - BearerAuth: []
@@ -513,7 +516,7 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/anyrouter-checkin_pkg_response.Response'
+            $ref: '#/definitions/response.Response'
       security:
       - BearerAuth: []
       summary: 删除定时任务
@@ -533,7 +536,7 @@ paths:
         name: request
         required: true
         schema:
-          $ref: '#/definitions/internal_handler.CronRequest'
+          $ref: '#/definitions/handler.CronRequest'
       produces:
       - application/json
       responses:
@@ -541,10 +544,10 @@ paths:
           description: OK
           schema:
             allOf:
-            - $ref: '#/definitions/anyrouter-checkin_pkg_response.Response'
+            - $ref: '#/definitions/response.Response'
             - properties:
                 data:
-                  $ref: '#/definitions/anyrouter-checkin_internal_model.CronTask'
+                  $ref: '#/definitions/model.CronTask'
               type: object
       security:
       - BearerAuth: []
@@ -565,7 +568,7 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/anyrouter-checkin_pkg_response.Response'
+            $ref: '#/definitions/response.Response'
       security:
       - BearerAuth: []
       summary: 立即触发执行定时任务
@@ -580,10 +583,10 @@ paths:
           description: OK
           schema:
             allOf:
-            - $ref: '#/definitions/anyrouter-checkin_pkg_response.Response'
+            - $ref: '#/definitions/response.Response'
             - properties:
                 data:
-                  $ref: '#/definitions/anyrouter-checkin_internal_service.CheckinLogSummary'
+                  $ref: '#/definitions/service.CheckinLogSummary'
               type: object
       security:
       - BearerAuth: []
